--- a/index.qmd
+++ b/index.qmd
@@ -3,23 +3,14 @@ title: "Index"
 format: html
 ---
 
-## Quarto
+---
+title: "Statistical Computing - Assignment 1"
+author: "Alan Hunter - HNTALA001"
+date: "February 2026"
+---
 
-Quarto enables you to weave together content and executable code into a finished document. To learn more about Quarto see <https://quarto.org>.
+This is the home page for my Quarto project for Assignment 1.
 
-## Running Code
-
-When you click the **Render** button a document will be generated that includes both content and the output of embedded code. You can embed code like this:
-
-```{r}
-1 + 1
-```
-
-You can add options to executable code like this 
-
-```{r}
-#| echo: false
-2 * 2
-```
-
-The `echo: false` option disables the printing of code (only output is displayed).
+- [Practical 1](Prac_1.qmd)
+- [Practical 3](Prac_3.qmd)
+- [Practical 4](Prac_4.qmd)
